Dashboard: fix for collapsed rows became invisible when hide controls was enabled, Fixes #987

--- a/src/css/less/grafana.less
+++ b/src/css/less/grafana.less
@@ -15,7 +15,7 @@
 
 .hide-controls {
   padding: 0;
-  .row-control-inner {
+  .row-tab {
     display: none;
   }
   .submenu-controls {
